--- a/css/style.css
+++ b/css/style.css
@@ -65,15 +65,36 @@
   color: white;
   box-shadow: white;
 }
+.wb {
+  background-color: black;
+  color: white;
+}
 /**
  * Fonts
  */
+strong,
+b {
+  font-weight: bold;
+}
+em,
+i {
+  font-style: italic;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Lato', Arial, sans-serif;
+  font-weight: bold;
+}
 /**
  * Body 
  */
 body {
+  font-family: 'Lato', Arial, sans-serif;
   background-color: #fffcf8;
-  font-family: Arial, sans-serif;
   line-height: 1.25em;
 }
 /**
@@ -124,6 +145,8 @@ div.aree-riservate ul {
 button.search {
   padding: 0.25em 10px;
   margin: 0.75em 15px;
+  width: 120px;
+  text-align: left;
   background: none;
   border: solid 1px #c8c8c8;
   color: #808080;
@@ -176,6 +199,29 @@ div.banner img {
 **/
 div.sidebar {
   margin-top: 1.5em;
+}
+div.icons ul {
+  margin-top: 0.5em;
+  margin-bottom: 1em;
+  font-size: 1.2em;
+  list-style-type: none;
+  padding-left: 0;
+  text-align: center;
+}
+div.icons ul li {
+  display: inline;
+  padding-left: 0;
+  margin-right: 10px;
+}
+div.icons ul li:last-child {
+  margin-right: 0;
+}
+div.icons ul li a {
+  text-decoration: none;
+  color: #005495;
+}
+div.icons ul li a:hover {
+  color: black;
 }
 div.box header {
   border-bottom: #fffcf8 solid 1px;
@@ -251,6 +297,8 @@ div.content figure figcaption {
   position: absolute;
   bottom: 0;
   padding: 1em 15px;
+  font-weight: bolder;
+  text-transform: uppercase;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.65);
   color: white;
