--- a/css/style.less
+++ b/css/style.less
@@ -355,6 +355,8 @@ div.content {
   }
 }
 div.content.secondary {
+  .fa { color: @dark-gray; }
+  .sep { padding: 0 4px; color: @gray; }
   header {
     margin-top: 2.5em;
     h2 {
