--- a/css/style.css
+++ b/css/style.css
@@ -328,6 +328,13 @@ div.content figure figcaption {
   background-color: rgba(0, 0, 0, 0.65);
   color: white;
 }
+div.content.secondary .fa {
+  color: #5a5a5a;
+}
+div.content.secondary .sep {
+  padding: 0 4px;
+  color: #808080;
+}
 div.content.secondary header {
   margin-top: 2.5em;
 }
