--- a/css/style.less
+++ b/css/style.less
@@ -88,6 +88,14 @@
 .text-only {}
 
 /**
+ * make possible to exchange columns order on mobile devices, i.e.
+ * <div class="col-md-9 floatright">right col on medium sizes</div>
+ * <div class="col-md-3">right col on mobile devices</div>
+*/
+.floatright { float: right; }
+@media screen and (max-width: 767px) { .floatright { float: none; } }
+
+/**
  * Fonts
  */
 strong, b {
@@ -207,7 +215,7 @@ div.main-nav {
     font-weight: bolder;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 991px) {
   div.header-right {
     display: none;
   }
@@ -217,6 +225,17 @@ div.main-nav {
       text-align: left;
     }
   }
+  div.secondary-nav {
+    li {margin-bottom: 1em;}
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  div.main-nav {
+    ul.navbar-nav {
+      float: right;
+      text-align: right;
+    }
+  }  
 }
 
 
@@ -251,8 +270,10 @@ div.icons {
     }
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 991px) {
   div.icons {
+    /* uncomment display: none if icons should be displayed */
+    display: none;
     ul li {
       margin-right: 25px;
     }
@@ -328,7 +349,7 @@ div#avvisi {
     }
   }
 }
-div#viaggia-con-noi {
+div#secondary-nav {
   ul {
     list-style-type: none;
     padding-left: 15px;
@@ -349,6 +370,18 @@ div#viaggia-con-noi {
   }
   a.active {
     font-weight: bolder;
+  }
+}
+@media screen and (max-width: 991px) {
+  div#secondary-nav {
+    ul ul  {
+      padding-left: 15px;
+      li {
+        &:last-child {
+          margin-bottom: 1.5em;
+        }
+      }
+    }
   }
 }
 
