--- a/css/style.less
+++ b/css/style.less
@@ -407,6 +407,7 @@ div.content {
   }
 }
 div.content.secondary {
+  min-height: 40em;
   .fa { color: @dark-gray; }
   .sep { padding: 0 4px; color: @gray; }
   header {
@@ -461,4 +462,67 @@ div.allegati {
       display: block;
     }
   }
+}
+
+/**
+ * Footer
+ */
+footer {
+  /*background-color: @dark-blue;*/
+  .footer-first {
+    padding-left: 30px;
+  }
+  .footer-last {
+    padding-right: 30px;
+  }
+}
+div.nav-footer {
+  /*.shadow(0.6);*/
+  margin-top: 2em;
+  color: white;
+  div.row {
+    .shadow(0.6);
+    background-color: @dark-blue;
+    padding-bottom: 1em;
+    /*margin: 1em 0;*/
+  }
+  h3 {
+    font-size: 100%;
+    font-weight: bold;
+    text-transform: uppercase;
+    padding-left: 2px;
+    margin-bottom: 0.25em;
+    padding-bottom: 4px;
+    border-bottom: 1px dotted @light-gray;
+  }
+  ul {
+    list-style-type: none;
+    padding: 0;
+    li {
+      margin-bottom: 0.25em;
+      a {
+        color: white;
+        text-decoration: none;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+  }
+}
+div.info-footer {
+  /*background-color: @dark-blue;*/
+  color: white;
+  div.row {
+    background-color: @dark-blue;
+    border-top: 1px solid @light-gray;
+    padding-top: 2em;
+    padding-bottom: 2em;
+    /*margin: 1em 0;*/
+    margin-top: 0;
+  }
+  p {
+  font-size: 90%;
+  line-height: 1.5em;
+}
 }
