--- a/css/style.less
+++ b/css/style.less
@@ -2,6 +2,7 @@
  * colors
  */
 @background: rgb(255,252,248);
+@black: rgb(51,51,51);
 @blue: rgb(0,113,187);
 @dark-blue: rgb(0,84,149);
 @light-blue: rgb(0,148,217);
@@ -406,6 +407,7 @@ div.content {
     };
   }
 }
+/* pagina secondaria std */
 div.content.secondary {
   min-height: 40em;
   .fa { color: @dark-gray; }
@@ -438,6 +440,48 @@ div.content.secondary {
     color: @dark-gray;
   }
 }
+/* notizie */
+div.content.secondary.notizie {
+  article {
+    margin-top: 2em;
+    h4 {
+      font-size: 92.85%;
+      margin: 0;
+      color: @dark-gray;
+    }
+    h2 {
+      margin: 0.25em 0;
+      font-size: 114.28%;
+      color: @dark-blue;
+    }
+    a {
+      color: @dark-blue;
+    }
+  }
+  article.first {
+    margin-top: 0;
+  }
+}
+div.content.secondary.notizie.approfondimenti {
+  img {
+    max-width: 33%;
+    margin-right: 1em;
+    float: left;
+  }
+  p {
+    text-align: left;
+  }
+}
+div.content.secondary.notizie.approfondimenti.dettaglio {
+  img {
+    float: none;
+    max-width: 100%;
+  }
+  p {
+    margin-top: 1em;
+  }
+}
+/* home page highlights */
 div.highlights {
   margin-bottom: 1em;
   margin-top: 1em;
@@ -453,13 +497,23 @@ div.highlights, div.small-highlights {
   }
 }
 /**
- * Allegati
+ * Right sidebar
  */
-div.allegati {
+div.right-sidebar {
   margin-top: 1.5em;
   div.box div.box-content ul {
     li {
       display: block;
+    }
+  }  
+}
+/* allegati */
+div.allegati {}
+/* iscrizione-notizie */
+div.iscrizione-notizie {
+  header {
+    p {
+      margin: 0;
     }
   }
 }
