--- a/css/style.css
+++ b/css/style.css
@@ -181,6 +181,9 @@ div.top-menu ul.navbar-nav li a {
   padding: 0;
   color: #5a5a5a;
 }
+ul.navbar-nav .tooltip {
+  margin-top: 1em;
+}
 div.banner img {
   width: 100%;
 }
@@ -245,7 +248,7 @@ div.icons ul {
 div.icons ul li {
   display: inline;
   padding-left: 0;
-  margin-right: 10px;
+  margin-right: 12px;
 }
 div.icons ul li:last-child {
   margin-right: 0;
@@ -310,12 +313,15 @@ div#travel-planner a {
 div#travel-planner a.active {
   font-weight: bolder;
 }
+div#travel-planner h2 a {
+  color: black;
+}
 div#avvisi div.list-icon {
-  width: 20%;
+  width: 10%;
   float: left;
 }
 div#avvisi div.list-content {
-  margin-left: 20%;
+  margin-left: 10%;
   padding-left: 5%;
 }
 div#avvisi div.list-content h3 {
