--- a/css/style.less
+++ b/css/style.less
@@ -191,6 +191,12 @@ div.top-menu {
     }
   }
 }
+i.fa-twitter {
+  color: @dark-blue;
+  &:hover {
+    color: @black;
+  }
+}
 ul.navbar-nav .tooltip {
   margin-top: 1em;
 }
@@ -261,6 +267,7 @@ div.icons {
       display: inline;
       padding-left: 0;
       margin-right: 12px;
+      font-size: 120%;
       &:last-child {
         margin-right: 0;
       }
@@ -279,9 +286,13 @@ div.icons {
 @media screen and (max-width: 991px) {
   div.icons {
     /* uncomment display: none if icons should be displayed */
-    display: none;
-    ul li {
-      margin-right: 25px;
+    /*display: none;*/
+    ul {
+      margin: 2em 0;
+      li {
+        margin-right: 50px;
+        font-size: 130%;
+      }
     }
   }
 }
@@ -333,6 +344,13 @@ div#travel-planner {
   }
   h2 a {
     color: black;
+  }
+  form {
+    input[type=submit] {
+      margin-top: 0.5em;
+      background-color: @gray;
+      color: white;
+    }
   }
 }
 div#avvisi {
@@ -450,6 +468,9 @@ div.content.secondary {
 }
 /* notizie */
 div.content.secondary.notizie {
+  p.filter {
+    margin-bottom: 20px;
+  }
   article {
     margin-top: 2em;
     h4 {
